terraform/modules/k8s-cluster/alb.tf
resource "aws_lb" "kubernetes" {
  name               = "k8s-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.ingress-alb.id]
  subnets            = [aws_subnet.private_k8s[0].id, aws_subnet.private_k8s[1].id, aws_subnet.private_k8s[2].id]

  enable_deletion_protection = false

  tags = merge(local.common_tags,
  {
    Name        = "alb-${var.environment}"
    Name = "alb-${var.environment}"
  })
}

resource "aws_security_group" "ingress-alb" {
  name   = "alb-sg"
  vpc_id = aws_vpc.vpc_k8s.id

  ingress {
    cidr_blocks = [
      "${chomp(data.http.myip.body)}/32"
    ]
    from_port   = 0
    to_port     = 22
    protocol    = "tcp"
  }

  // Terraform removes the default rule
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [
      "0.0.0.0/0"]
  }

  tags = merge(local.common_tags,
  {
    Name = "access-alb"
  })
}
